# gemma-talker

./: .gitignore  README.md  chat_gemma.py  install.ps1  install.sh  pyproject.toml  requirements.txt  test_chat_gemma.py
.codex-venv/: pyvenv.cfg
gemma_talker/: __init__.py  __main__.py  cli.py  config.py  serve.py
gemma_talker/application/: __init__.py  chat_session.py  commands.py  ports.py
gemma_talker/domain/: __init__.py  conversation.py  messages.py
gemma_talker/infrastructure/: __init__.py  llama_cpp_model.py  markdown_transcript.py  terminal_ui.py
tests/: test_chat_session.py  test_commands.py  test_config.py  test_infrastructure.py  test_legacy_wrapper.py  test_serve.py
